@@ -449,8 +449,9 @@ std::wstring CheckDisk::get_filter(unsigned int drvType) {
 }
 
 
+typedef checkHolders::CheckContainer<checkHolders::MaxMinBoundsDiscSize> PathContainer;
 
-/*
+
 NSCAPI::nagiosReturn CheckDisk::CheckFileSize(std::list<std::wstring> args, std::wstring &message, std::wstring &perf) {
 	NSCAPI::nagiosReturn returnCode = NSCAPI::returnOK;
 	bool bPerfData = true;
@@ -459,8 +460,8 @@ NSCAPI::nagiosReturn CheckDisk::CheckFileSize(std::list<std::wstring> args, std:
 		message = _T("Missing argument(s).");
 		return NSCAPI::returnUNKNOWN;
 	}
-	file_finder::PathContainer tmpObject;
-	std::list<file_finder::PathContainer> paths;
+	PathContainer tmpObject;
+	std::list<PathContainer> paths;
 
 	MAP_OPTIONS_BEGIN(args)
 		MAP_OPTIONS_STR_AND(_T("File"), tmpObject.data, paths.push_back(tmpObject))
@@ -484,8 +485,8 @@ NSCAPI::nagiosReturn CheckDisk::CheckFileSize(std::list<std::wstring> args, std:
 
 	file_filter::filesize_engine_interface impl = file_filter::factories::create_size_engine();
 
-	for (std::list<file_finder::PathContainer>::const_iterator pit = paths.begin(); pit != paths.end(); ++pit) {
-		file_finder::PathContainer path = (*pit);
+	BOOST_FOREACH(PathContainer &path, paths) {
+		
 		std::wstring tstr;
 		std::wstring sName = path.getAlias();
 		//file_finder::get_size sizeFinder;
@@ -508,7 +509,7 @@ NSCAPI::nagiosReturn CheckDisk::CheckFileSize(std::list<std::wstring> args, std:
 	return returnCode;
 }
 
-
+/*
 
 NSCAPI::nagiosReturn CheckDisk::getFileAge(std::list<std::wstring> args, std::wstring &message, std::wstring &perf) {
 	NSCAPI::nagiosReturn returnCode = NSCAPI::returnOK;
@@ -795,8 +796,8 @@ NSCAPI::nagiosReturn CheckDisk::CheckFiles(std::list<std::wstring> args, std::ws
 NSCAPI::nagiosReturn CheckDisk::handleCommand(const std::wstring &target, const std::wstring &command, std::list<std::wstring> &arguments, std::wstring &message, std::wstring &perf) {
 	if (command == _T("checkfiles"))
 		return CheckFiles(arguments, message, perf);
-// 	else if (command == _T("checkfilesize"))
-// 		return CheckFileSize(arguments, message, perf);
+ 	else if (command == _T("checkfilesize"))
+ 		return CheckFileSize(arguments, message, perf);
 	else if (command == _T("checkdrivesize"))
 		return CheckDriveSize(arguments, message, perf);
 // 	else if (command == _T("checksinglefile"))
