@@ -1,3 +1,3 @@
 version=0.4.1
-build=75
-date=2012-12-28
+build=77
+date=2013-01-12
